--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -97,13 +97,33 @@ Borrowed from {{bor|ia|en|-ics}}, {{bor|ia|fr|-ique}}, {{bor|ia|it|-ica}}, {{bor
 
 ----
 
+----
+
+==Old Polish==
+
+===Etymology===
+{{inh+|zlw-opl|sla-pro|*-ica}}.
+
+===Suffix===
+{{head|zlw-opl|suffix|g=f}}
+
+# {{n-g|Forms feminine nouns}}.
+
+====Derived terms====
+{{suffixsee|zlw-opl}}
+
+====Descendants====
+* {{desc|pl|-ica}}
+
+----
+
 ==Polish==
 
 ===Alternative forms===
 * {{alt|pl|-yca}}
 
 ===Etymology===
-{{inh+|pl|sla-pro|*-ica}}.
+{{inh+|pl|zlw-opl|-ica}}, from {{inh|pl|sla-pro|*-ica}}.
 
 ===Pronunciation===
 {{pl-p|a=LL-Q809 (pol)-Olaf--ica.wav}}
@@ -111,7 +131,7 @@ Borrowed from {{bor|ia|en|-ics}}, {{bor|ia|fr|-ique}}, {{bor|ia|it|-ica}}, {{bor
 ===Suffix===
 {{head|pl|suffix|g=f}}
 
-# {{non-gloss definition|Forms feminine nouns, especially pejoratives and augmentatives}}
+# {{n-g|Forms feminine nouns, especially pejoratives and augmentatives}}.
 #: {{suffixusex|pl|lewo|lewica}}
 
 ====Declension====
