t+ur:[[بَلْقان]] ([[WT:EDIT|Assisted]]) <Balkans#69371061>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -94,6 +94,7 @@ Of {{der|en|trk|-}} origin; compare {{cog|tr|balkan||wooded mountain range}}.<re
 * Thai: {{t|th|บอลข่าน|tr=bɔn-kàan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
 * Ukrainian: {{t|uk|Балкани|m-p}}
+* Urdu: {{t|ur|بَلْقان|m|tr=balqān}}
 * Vietnamese: {{t|vi|Balkan}}
 {{trans-bottom}}
 
