t+pt:[[somável]] ([[WT:EDIT|Assisted]]) <summable#69373966>

--- a/en/s/summable.855773.wikitext
+++ b/en/s/summable.855773.wikitext
@@ -17,6 +17,7 @@
 * Greek: {{t+|el|αθροίσιμος}}
 {{trans-mid}}
 * Italian: {{t+|it|sommabile}}
+* Portuguese: {{t|pt|somável}}
 * Romanian: {{t|ro|sumabil}}
 {{trans-bottom}}
 
