--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -7,11 +7,11 @@ Perhaps a {{clq|en|la|potiusque sero quam numquam|nocap=1}} from the 4th book<re
 {{head|en|adverb|head=[[better]] [[late]] than [[never]]}}
 
 # It's better to do something late, than to never do it at all.
-#* '''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
-#*: ''Their insolence and recklessness must be opposed, and '''better late than never'''.''
+#* {{quote-book|en|author={{w|Livy}}|title={{w|Ab urbe condita (Livy)|Ab Urbe Condita}}|trans-title=From the Founding of the City|year=9 BCE|year_published=1996|t=Their insolence and recklessness must be opposed, and '''better late than never'''.}}
+#* {{quote-av|en|author={{w|Dan Aykroyd}} and {{w|Harold Ramis}}|director={{w|Ivan Reitman}}|actor={{w|Cheech Marin}}|role=Dock Supervisor|title={{w|Ghostbusters II}}|date=16 June 1989|time=|text=[after seeing the ghost of the ''Titanic'' arrive in New York Harbor] Well, '''better late than never'''.}}
 
 ====Translations====
-{{trans-top|it’s better to do something late, than to never do it at all}}
+{{trans-top|it's better to do something late, than to never do it at all}}
 * Albanian: {{t|sq|më mirë vonë se kurrë}}
 * Arabic: {{t|ar|أَن يَأْتِي مُتَأَخِّرًا خَيْر مِن أَلَّا يَأْتِي أَبَدًا}}
 * Armenian: {{t|hy|լավ է ուշ, քան երբեք}}
