--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -21,6 +21,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 *: Mandarin: {{t+|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
 *: Cantonese: {{t|yue|任天堂|tr=Jam1 tin1 tong4|sc=Hani}}
 * Esperanto: {{t|eo|Nintendo}}
+* French: {{t+|fr|Nintendo}}
 * Hindi: {{t|hi|निंटेंडो}}
 * Italian: {{t+|it|Nintendo}}
 * Japanese: {{t|ja|任天堂}}, {{t|ja|ニンテンドー|tr=Nintendō}}
