change to adj form, see [[Wiktionary:Tea room/2022/September]] <manqués#69382081>

--- a/en/m/manqués.741511.wikitext
+++ b/en/m/manqués.741511.wikitext
@@ -5,7 +5,7 @@
 * {{a|French}} {{IPA|en|/mɑ̃ke/}}
 
 ===Adjective===
-{{en-adj|-}}
+{{head|en|adjective form}}
 
 # {{lb|en|postpositive}} {{plural of|en|manqué}}
 #* '''1991''', Ilya Zemtsov, ''Encyclopedia of Soviet Life'', page 221:
