--- a/en/m/metrication.720326.wikitext
+++ b/en/m/metrication.720326.wikitext
@@ -10,6 +10,7 @@
 
 ====Synonyms====
 * {{l|en|metrification}} {{qualifier|US|Canada}}
+* {{l|en|metric conversion}}
 
 ====Related terms====
 * {{l|en|metricate}}
