--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -37,6 +37,29 @@
 
 ----
 
+==Polish==
+{{wp|Armia Krajowa|lang=pl}}
+{{wp|Akcja Katolicka|lang=pl}}
+
+===Pronunciation===
+{{pl-p|a'ka|h=A.K.}}
+
+===Noun===
+{{pl-noun|n|indecl=1}}
+
+# {{initialism of|pl|{{w|Armia Krajowa}}}}
+# {{initialism of|pl|{{w|Catholic Action|Akcja Katolicka}}}}
+
+====Derived terms====
+{{col3|pl|title=adjective|akowski}}
+{{col3|pl|title=noun|akowiec}}
+
+===Further reading===
+* {{R:pl:WSJP}}
+* {{R:pl:PWN}}
+
+----
+
 ==Turkish==
 
 ===Proper noun===
