--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -17,7 +17,7 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 # Any [[bird]] that whistles or is noted for its whistling vocalisations (applied regionally to various specific species).
 #* {{RQ:Spenser Faerie Queene|book=II|canto=XII|passage=The lether-winged Bat, dayes enimy, / The ruefull Strich, still waiting on the bere, / The '''Whistler''' shrill, that who so heares, doth dy {{...}}}}
 # The [[goldeneye]] (certain ducks of genus ''[[Bucephala]]'').
-# The [[whistling marmot]] ({{taxlink|Marmota caligata|species|noshow=1|ver=160928}}).
+# The [[whistling marmot]] ({{taxlink|Marmota caligata|species|ver=160928}}).
 # The [[mountain beaver]] ({{taxlink|Aplodontia rufa|species|ver=190904}}).
 # An [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]].
 # A [[broken-winded]] [[horse]].
