/* Derived terms */ <whistler#69392901>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -28,55 +28,55 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 
 ====Derived terms====
 {{der4|en|title=Species of whistler, family [[Pachycephalidae]]
-|Baliem whistler
-|bare-throated whistler
-|Biak whistler
-|Bismarck whistler
-|black-chinned whistler
-|black-headed whistler
-|Bornean whistler
-|Bougainville hooded whistler
-|brown whistler
-|brown-backed whistler
-|drab whistler
-|fawn-breasted whistler
-|Fiji whistler
-|Gilbert's whistler
-|golden whistler
-|golden-backed whistler
-|green-backed whistler
-|grey whistler
-|Guadalcanal hooded whistler
-|hooded whistler
-|island whistler
-|olive whistler
-|oriole whistler
-|Lorentz's whistler
-|Louisiade whistler
-|mangrove whistler
-|mangrove golden whistler
-|maroon-backed whistler
-|New Caledonian whistler
-|red-lored whistler
-|regent whistler
-|Rennell whistler
-|rufous whistler
-|rusty-breasted whistler
-|rusty whistler
-|Samoan whistler
-|Sangihe whistler
-|Sclater's whistler
-|sulphur-bellied whistler
-|Temotu whistler
-|Tongan whistler
-|Vanuatu whistler
-|Vogelkop whistler
-|Wallacean whistler
-|western whistler
-|white-breasted whistler
-|white-vented whistler
-|yellow-bellied whistler
-|yellow-throated whistler
+|{{vern|Baliem whistler}}
+|{{vern|bare-throated whistler}}
+|[[Biak whistler]]
+|{{vern|Bismarck whistler}}
+|{{vern|black-chinned whistler}}
+|{{vern|black-headed whistler}}
+|{{vern|Bornean whistler}}
+|{{vern|Bougainville hooded whistler}}
+|{{vern|brown whistler}}
+|{{vern|brown-backed whistler}}
+|{{vern|drab whistler}}
+|{{vern|fawn-breasted whistler}}
+|{{vern|Fiji whistler}}
+|{{vern|Gilbert's whistler}}
+|[[golden whistler]]
+|{{vern|golden-backed whistler}}
+|{{vern|green-backed whistler}}
+|{{vern|grey whistler}}
+|{{vern|Guadalcanal hooded whistler}}
+|{{vern|hooded whistler}}
+|{{vern|island whistler}}
+|{{vern|olive whistler}}
+|{{vern|oriole whistler}}
+|{{vern|Lorentz's whistler}}
+|{{vern|Louisiade whistler}}
+|{{vern|mangrove whistler}}
+|[[mangrove golden whistler]]
+|{{vern|maroon-backed whistler}}
+|{{vern|New Caledonian whistler}}
+|{{vern|red-lored whistler}}
+|{{vern|regent whistler}}
+|{{vern|Rennell whistler}}
+|{{vern|rufous whistler}}
+|{{vern|rusty-breasted whistler}}
+|{{vern|rusty whistler}}
+|{{vern|Samoan whistler}}
+|{{vern|Sangihe whistler}}
+|{{vern|Sclater's whistler}}
+|{{vern|sulphur-bellied whistler}}
+|{{vern|Temotu whistler}}
+|{{vern|Tongan whistler}}
+|{{vern|Vanuatu whistler}}
+|{{vern|Vogelkop whistler}}
+|{{vern|Wallacean whistler}}
+|{{vern|western whistler}}
+|{{vern|white-breasted whistler}}
+|{{vern|white-vented whistler}}
+|{{vern|yellow-bellied whistler}}
+|{{vern|yellow-throated whistler}}
 }}
 
 ====Translations====
