--- a/en/f/four score seven years ago.803553.wikitext
+++ b/en/f/four score seven years ago.803553.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Adverb===
-{{head|en|adverb|head=four [[score]] and seven years [[ago]]}}
+{{head|en|adverb}}
 
 # {{alternative form of|en|four score and seven years ago}}
