move dog syns to main entry <sausage dog#69400973>

--- a/en/s/sausage dog.856242.wikitext
+++ b/en/s/sausage dog.856242.wikitext
@@ -4,11 +4,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{synonym of|en|dachshund}} (a dog breed)
+# {{synonym of|en|dachshund||type of dog}}
 # A [[draught excluder]] in the [[shape]] of a [[dog]].
-
-====Synonyms====
-* {{l|en|badger dog}}
-* {{l|en|wiener dog}}
 
 [[Category:en:Dogs]]
