--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[Image:Weasel.jpg|thumb|A  '''weasel''' (sense 1).]]
+[[Image:Mustela nivalis -British Wildlife Centre-4.jpg|thumb|A  '''weasel''' (sense 1).]]
 
 ===Alternative forms===
 * {{l|en|weazel}} {{qual|archaic}}
