--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -16,5 +16,10 @@
 * {{sense|participant in physical sports}} {{l|en|athlete}}, {{l|en|jock}}
 * {{sense|idiot}} {{l|en|bruiser}}, {{l|en|dumbbell}}, {{l|en|moron}}, {{l|en|buffoon}}, {{l|en|dimwit}}, {{l|en|pinhead}}, {{l|en|meathead}}, {{l|en|birdbrain}}, {{l|en|peabrain}}, {{l|en|goon}}, {{l|en|dummy}}, {{l|en|dipstick}}, {{l|en|idiot}}
 
+====Translations====
+{{trans-top|large, strong, but inept, bumbling, buffoonish or unintelligent man}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:en:People]]
 [[Category:en:Sports]]
