t+tr:[[diş]] ([[WT:EDIT|Assisted]]) <sawtooth#69410044>

--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -37,6 +37,7 @@ From {{compound|en|saw|tooth}}.
 *: Nynorsk: {{t|nn|sagtann|f}}
 * Russian: {{t|ru|[[зуб]] [[пила|пилы́]]|m}}
 * Swedish: {{t+|sv|sågtand|c}}
+* Turkish: {{t+|tr|diş}}
 {{trans-bottom}}
 
 {{trans-see|sawtooth wave}}
