--- a/en/f/frick.741824.wikitext
+++ b/en/f/frick.741824.wikitext
@@ -21,3 +21,5 @@
 # {{euphemistic form of|en|fuck}}
 #* '''2006''', T. J. Baldwin, ''Nazdak'' (page 24)
 #*: Eric didn't give a '''frick''' about looking at the gun but he was excited to spend some time in a social situation, no matter how awkward it might be.
+
+[[Category:English minced oaths]]
