t+ky:[[кемитме]] ([[WT:EDIT|Assisted]]) <subtraction#69410276>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -56,6 +56,7 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}. Can be decomp
 * Kannada: {{t|kn|ವ್ಯವಕಲನ}}
 * Kazakh: {{t|kk|азайту}}
 * Korean: {{t+|ko|뺄셈}}, {{t+|ko|빼기}}
+* Kyrgyz: {{t|ky|кемитме}}
 * Latvian: {{t|lv|atņemšana|f}}
 * Lithuanian: {{t|lt|atimtis|m}}
 * Macedonian: {{t|mk|одземање|n}}
@@ -98,6 +99,7 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}. Can be decomp
 * Japanese: {{t+|ja|引き算|tr=ひきざん, hikizan}}, {{t+|ja|減算|tr=げんさん, gensan}}, {{t+|ja|減法|tr=げんぽう, genpō}}
 * Korean: {{t+|ko|뺄셈}}
 {{trans-mid}}
+* Kyrgyz: {{t|ky|кемитме}}
 * Maori: {{t|mi|tangohanga}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
