/* Derived terms */ <college#69411027>

--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -61,8 +61,7 @@ From {{inh|en|enm|college}}, from {{der|en|fro|college}}, from {{der|en|la|collÄ
 }}
 
 ====Derived terms====
-* {{l|en|fresh-out-of-college}}
-* {{l|en|out-of-college}}
+{{der2|en|fresh-out-of-college|out-of-college|city technology college|college pheasant|college town|college try|college wage premium|college-aged|college-goer|college-ruled|cow college|merit badge college|middle college|sixth-form college|staff college}}
 
 ====Related terms====
 * {{l|en|old college try}}
