--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -436,7 +436,7 @@ From {{bor|enm|fro|college}}, from {{der|enm|la|collēgium}}.
 * {{l|enm|collegiate}}
 
 ====Descendants====
-* {{desc|en|college}}
+* {{desc|en|college}} {{see desc}}
 * {{desc|sco|college}}
 
 ====References====
