--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -461,7 +461,7 @@ Written declension is more complicated due to the difficulty of combining "colle
 
 # An [[institution]] or [[organization]] {{gloss|an organised establishment of people}}:
 ## A [[monastery]] or [[convent]]; a [[monastic]] institution.
-## A {{l|en|college}} {{gloss|semi-autonomous [[university]] [[institution]]}}
+## A {{l|en|college}} {{gloss|semi-autonomous [[university]] institution}}
 
 ====Descendants====
 * {{desctree|fr|collège}}
