--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -305,7 +305,11 @@ From {{der|es|la|mundus||world}}.
 ==Tagalog==
 
 ===Etymology===
-Borrowed from {{bor|tl|es|mundo||world}}.
+{{bor+|tl|es|mundo||world}}.
+
+===Pronunciation===
+* {{hyph|tl|mun|do}}
+* {{tl-IPA|mundó}}
 
 ===Noun===
 {{tl-noun|mundó}}
