/* Etymology */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <dacryohemorrhea#69429687>

--- a/en/d/dacryohemorrhea.746510.wikitext
+++ b/en/d/dacryohemorrhea.746510.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From Greek ''dakryo-'', "tear" + ''haima'', "blood" + ''rheein'', "to flow" (or {{prefix|en|dacry}} {{m|en|-o-}} + {{m|en|hemorrhea}}).
+{{af|en|dacry-|-o-|hemorrhea}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˌdækɹɪəʊheməˈɹɪə/}}
