--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -151,7 +151,7 @@ From {{inh|pt|roa-opt|nove}}, from {{inh|pt|la|novem||nine}}, from {{inh|pt|ine-
 
 ===Pronunciation===
 {{pt-IPA|nóve}}
-* {{rhymes|pt|ɔvi|s=2}}
+* {{rhymes|pt|ɔvi|q1=Brazil|ɔvɨ|q2=Portugal|s=2}}
 * {{hyphenation|pt|no|ve}}
 * {{a|Brazil}} {{audio|pt|PTBR-Nove.ogg|Audio}}
 
