--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -27,7 +27,7 @@ Abbreviation of various terms and phrases.
 
 ===Pronunciation===
 * {{IPA|en|/ˌsiːˈdiː/}}
-* {{rhymes|en|i|s=2}}
+* {{rhymes|en|iː|s=2}}
 
 ===Noun===
 {{en-noun|~}}
