--- a/en/g/grid electricity.776660.wikitext
+++ b/en/g/grid electricity.776660.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|electricity from the grid}}
-* Finnish: {{t|fi|verkkosähkö}}
+* Catalan: {{t|ca|electricitat de xarxa|f}}
 {{trans-mid}}
+* Finnish: {{t|fi|verkkosähkö}}
 {{trans-bottom}}
