/* Translations */Added Hebrew translation. <behold#69452870>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -92,6 +92,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Gothic: {{t|got|𐍃𐌰𐌹}}
 * Greek:
 *: Ancient: {{t|grc|ἰδοῦ}}
+* Hebrew: {{t|he|הִנֵּה}}
 * Interlingua: {{t|ia|ecce}}
 {{trans-mid}}
 * Italian: {{t+|it|ecco}}
