--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -53,15 +53,15 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 
 ====Derived terms====
 {{der3|en
-|Absecon Island|Barry Island|Beef Island|Buck Island|Cape Clear Island|Capella Island|Cockroach Island|coney island|Cooper Island|Dead Chest Island|Deer Island|desert island|Dog Island|East Seal Dog Island|Eustatia Island|Fallen Jerusalem Island|Farne Islands|Flanagan Island
-|floating island|French Island|George Dog Island|Ginger Island|Gough Island|Grand Island|Great Barrier Island|Great Dog Island|Green Island|Guana Island|half-island|Hans Lollik Island|Hassel Island|Hayling Island|heat island|high island|Holy Island
+|Absecon Island|Barry Island|Beef Island|Booby Island|Buck Island|Cape Clear Island|Capella Island|Cockroach Island|coney island|Cooper Island|Dead Chest Island|Deer Island|desert island|Dog Island|East Seal Dog Island|Eustatia Island|Fallen Jerusalem Island|Farne Islands|Flanagan Island
+|floating island|French Island|George Dog Island|Ginger Island|Gough Island|Grand Island|Great Barrier Island|Great Bird Island|Great Dog Island|Green Island|Guana Island|Guiana Island|half-island|Hans Lollik Island|Hassel Island|Hayling Island|heat island|high island|Holy Island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
-|kitchen island|Leduck Island|Little Island|Long Island|low island|Merritt Island|Mersea Island|Mosquito Island|Necker Island|no man is an island
-|Norfolk Island|Norman Island|North Island|Old Jerusalem Island|Pelican Island|Peter Island|Puget Island|Rhode Island|Rock Island|Ruth Island|Saba Island|
-|safety island|Salt Island|Savana Island|Scrub Island|security island|Island|sea-island|Shark Island|South Island|Stewart Island|St. Lawrence Island
+|kitchen island|Leduck Island|Little Island|Little Scrub Island|Long Island|low island|Maiden Island|Merritt Island|Mersea Island|Mosquito Island|Necker Island|no man is an island
+|Norfolk Island|Norman Island|North Island|Old Jerusalem Island|Pelican Island|Peter Island|Prickly Pear Island|Puget Island|Rhode Island|Rock Island|Ruth Island|Saba Island|
+|safety island|Salt Island|Sandy Island|Savana Island|Scrub Island|Seal Island|security island|Island|sea-island|Shark Island|South Island|Stewart Island|St. Lawrence Island
 |tidal island|traffic island|Valentia Island|Vancouver Island|Wake Island|Wake's Island
-|Wallasea Island|West Dog Island|White Island|wh-island}}
+|Wallasea Island|West Dog Island|White Island|wh-island|York Island}}
 
 ====Related terms====
 * {{l|en|insular}}
