--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -34,6 +34,7 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 * Catalan: {{t+|ca|fracàs|m}}, {{t|ca|pífia|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|瞎炮|tr=xiāpào}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞炮}}, {{t|cmn|哑炮|tr=yǎpào}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞彈}}, {{t|cmn|哑弹|tr=yǎdàn}}, {{t|cmn|瞎彈}}, {{t|cmn|瞎弹|tr=xiādàn}}
+* Czech: {{t+|cs|zmetek|m}}, {{t+|cs|šmejd|m}}, {{t|cs|nefunkční věc}}
 * Danish: {{t|da|fuser|c}} {{qualifier|unexploded ordnance}}, {{t|da|forsager|c}} {{qualifier|malfunctioning detonator or cartridge}}
 * Dutch: {{t+|nl|blindganger}} {{qualifier|unexploded ordnance}}
 * Estonian: {{t-needed|et}}
