--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1338,7 +1338,7 @@ From {{der|tcs|en|heart}}.
 ==Turkish==
 
 ===Pronunciation===
-* {{IPA|tr|/ät̪/}}
+* {{IPA|tr|/ɑt/}}
 * {{audio|tr|Tur-at.ogg|Audio}}
 
 ===Etymology 1===
