--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -224,6 +224,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Ibanag: {{t|ibg|babuy}}
 * Icelandic: {{tt+|is|svín|n}}
 * Ido: {{qualifier|♂♀}} {{tt+|io|porko}}, {{qualifier|♂}} {{tt+|io|porkulo}}, {{qualifier|♂♀}} {{tt+|io|porkino}}
+* Ìgbò: {{tt|ig|ezì}}
 * Ilocano: {{tt|ilo|baboy}}
 * Imonda: {{tt|imn|malhu}}
 * Inabaknon: {{tt|abx|baktin}}
