--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -333,7 +333,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Sylheti: {{t|syl|ꠔꠦ}}, {{t|syl|ꠔꠣꠁꠟꠦ}}
 * Thai: {{t-needed|th}}
 * Tok Pisin: {{t|tpi|orait}}
-* Turkish: {{t+|tr|o zaman}}
+* Turkish: {{t+|tr|o hâlde}}, {{t+|tr|o zaman}}, {{t+|tr|öyleyse}}
 * Ukrainian: {{t|uk|тоді́}}, {{t+|uk|то}}, {{t|uk|у тако́му ра́зі}}
 * Urdu: {{t|ur|تو|tr=to|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|thì}}, {{t+|vi|thế thì}}, {{t+|vi|vậy thì}}
