--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -72,7 +72,7 @@
 * Italian: {{t+|it|minimo|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t+|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t|km|ភាព​តូចបំផុត}}
 * Lao: {{t-needed|lo}}
 * Latin: {{t+|la|minimum}}
 * Maori: {{t|mi|mōkito}}
