--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -31,16 +31,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|ċinn||chin}}, from {{inh|en|gem-pro
 * {{sense|boxing}} ''See'' '''[[glass jaw]]'''
 
 =====Derived terms=====
-{{rel-top3|Terms derived from ''chin''}}
-* {{l|en|chin music}}
-* {{l|en|chinstrap}}
-{{rel-mid3}}
-* {{l|en|chin up}}
-* {{l|en|chin-up}}
-{{rel-mid3}}
-* {{l|en|double chin}}
-* {{l|en|take something on the chin}}
-{{rel-bottom}}
+{{der3|en|chin music|chinstrap|chin up|chin-up|double chin|take something on the chin|butt chin|butt-chin|chin curtain|chin diaper|chin guard|chin omelette|chin roll|chin shield|chin strip|chin wag|chin whelk|chin-wag|cleft chin|glass chin|keep one's chin up|lead with one's chin|take on the chin|up to one's chin|up to the chin}}
 
 =====Translations=====
 {{trans-top|bottom of a face}}
