--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -359,7 +359,7 @@ Shortening of {{m|en|chinchilla}}.
 # {{lb|en|informal}} A [[chinchilla]].
 
 ===See also===
-{{col2|en|Aksai-chin|Chiang-chin|chin chin|chin chow|chin cough|ham chin peng|T'ien-chin|}}
+{{col2|en|chin chin|chin chow|chin cough|ham chin peng}}
 
 ===Anagrams===
 * {{anagrams|en|a=chin|HNIC|Inch|ichn-|inch}}
