/* Translations */ added Gothic translation <seize#69498650>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -83,7 +83,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * French: {{t+|fr|saisir}}, {{t+|fr|saisir|alt=se saisir de}}
 * Galician: {{t+|gl|agarrar}}, {{t|gl|apreixar}}
 * German: {{t+|de|ergreifen}}, {{t+|de|fassen}}, {{t+|de|greifen}}
-* Gothic: {{t|got|𐌲𐍂𐌴𐌹𐍀𐌰𐌽}}
+* Gothic: {{t|got|𐌲𐍂𐌴𐌹𐍀𐌰𐌽}}, {{t|got|𐌳𐌹𐍃𐍃𐌹𐍄𐌰𐌽}}
 * Greek:
 *: Ancient: {{t|grc|ἁρπάζω}}, {{t|grc|συλλαμβάνω}}
 * Hungarian: {{t+|hu|megfog}}, {{t+|hu|megragad}}
