t+zza:[[çenge ]] ([[WT:EDIT|Assisted]]) <chin#69500415>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -281,6 +281,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|ċinn||chin}}, from {{inh|en|gem-pro
 * Yiddish: {{t|yi|גאָמבע|f}}
 * Yoruba: {{t|yo|ìgbọn}}, {{t|yo|àgbọ̀n}}
 * Yucatec Maya: {{t|yua|k'ono'ch}}
+* Zazaki: {{t|zza|çenge |m}}
 * Zhuang: {{t|za|hangz}}
 * Zulu: {{t+|zu|isilevu|c7|c8}}
 * ǃXóõ: {{t|nmn|dzàni}}
