--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -158,6 +158,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 
 =====Translations=====
 {{trans-top|to produce an air current}} <!--1-->
+* Afrikaans: {{t+|af|blaas}}
 * Aklanon: {{t|akl|huyop}}
 * Arabic: {{t|ar|نَفَخَ}}
 *: Gulf Arabic: {{t|afb|هف|tr=haf}}
