t+sq:[[nuselalë]] t+sq:[[bukël]] t+sq:[[nusëz]] ([[WT:EDIT|Assisted]]) <least weasel#69504189>

--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -31,7 +31,7 @@ From {{m|en|least}} + {{m|en|weasel}}, from the fact that it is the smallest mem
 
 ====Translations====
 {{trans-top|''Mustela nivalis''}}
-* Albanian: {{t|sq|nuse e lalës|?}}
+* Albanian: {{t|sq|nuse e lalës|?}}, {{t+|sq|nuselalë|f}}, {{t+|sq|bukël|f}}, {{t+|sq|nusëz|f}}
 * Armenian: {{t+|hy|աքիս}}
 * Basque: {{t+|eu|erbinude}}
 * Belarusian: {{t|be|ла́ска|f}}
