--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -319,9 +319,7 @@ From {{inh|en|enm|college}}, from {{der|en|frm|college}}, from {{der|en|fro|coll
 ===Anagrams===
 * {{anagrams|en|a=ceegllo|geocell}}
 
-[[Category:en:Buildings]]
-[[Category:en:Universities]]
-{{C|en|Collectives}}
+{{c|en|Buildings|Universities|Collectives|Schools}}
 
 ----
 
