t+cs:[[sebrat]] ([[WT:EDIT|Assisted]]) <cop#69506705>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -60,6 +60,7 @@
 =====Translations=====
 {{trans-top|to capture, to take ''(informal)''}}
 * Bulgarian: {{t+|bg|хващам|sc=Cyrl}}, {{t+|bg|пипвам|sc=Cyrl}}, {{t+|bg|арестувам|sc=Cyrl}}
+* Czech: {{t+|cs|sebrat|pf}}
 * Finnish: {{t+|fi|napata}}, {{t+|fi|ottaa}}
 * German: {{t+|de|erlangen}}
 * Greek: {{t+|el|παίρνω}}
