--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -15,7 +15,7 @@
 ====Usage notes====
 Do not confuse {{lang|mul|月}} with {{m|mul|⺼|sc=Hani}}, a form of {{m|mul|肉||flesh, meat}} when used as the left-hand radical of a character. {{m|mul|⺼|sc=Hani}} is used for parts of the body such as {{m|mul|背||back}} or {{m|mul|肝||liver}}. These may be written identically as {{lang|mul|月}}, but in careful use they are distinguished, with the inside of {{lang|mul|⺼|sc=Hani}} being written with unattached diagonal strokes. This is particularly an issue in looking up characters by radical; compare the [[Appendix:Chinese radical/月|月 index]] and [[Appendix:Chinese radical/肉|肉 index]].
 
-Older/orthodox forms such as the Kangxi dictionary forms may additionally distinguish components that are related to neither {{m|mul|月|sc=Hani}} nor {{m|mul|肉|sc=Hani}}, such as e.g. {{m|mul|朋|sc=Hani}}, {{m|mul|前|sc=Hani}} or {{m|mul|服|sc=Hani}} where the two horizontal strokes {{m|mul|一|sc=Hani}} would be written as two unattached dots {{m|mul|丶|sc=Hani}} instead. Also, the bottom part of {{m|mul|青|sc=Hani}}({{m|mul|靑|sc=Hani}}) components would be written as {{m|mul|円|sc=Hani}}. The orthodox {{lang|mul|月}} and {{m|mul|⺼|sc=Hani}} components, while similar, would still be distinguished slightly: they both use horizontal strokes, but {{m|mul|⺼|sc=Hani}} connects them to the {{m|mul|冂|sc=Hani}} shape on both sides, and {{lang|mul|月}} only connects them on the left side.
+Older/orthodox forms such as the Kangxi dictionary forms may additionally distinguish components that are related to neither {{m|mul|月|sc=Hani}} nor {{m|mul|肉|sc=Hani}}, such as e.g. {{m|mul|朋|sc=Hani}}, {{m|mul|前|sc=Hani}} or {{m|mul|服|sc=Hani}} where the two horizontal strokes {{m|mul|一|sc=Hani}} would be written as two unattached dots {{m|mul|丶|sc=Hani}} instead. Also, the bottom part of {{m|mul|青|sc=Hani}}({{m|mul|靑|sc=Hani}}) components would be written as {{m|mul|円|sc=Hani}}. The orthodox {{lang|mul|月}} and {{m|mul|⺼|sc=Hani}} components, while similar, would still be distinguished slightly: they both use horizontal strokes, but {{m|mul|⺼|sc=Hani}} connects them to the {{m|mul|⺆|sc=Hani}} shape on both sides, and {{lang|mul|月}} only connects them on the left side.
 
 ====Derived characters====
 * [[Appendix:Chinese radical/月]]
