/* Conjunction */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <at#69516437>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1218,8 +1218,8 @@ Compare {{cog|pag|ta||because}}, {{cog|pag|et}}, and {{cog|pag|tan||and}}.
 
 # [[and]]
 #: {{syn|tl|saka}}
-# [[because]]
-#: {{ux|tl|Bilisan mo at ako'y aalis na.|Do it faster as I'm leaving soon.}}
+# [[because]]; [[as]]
+#: {{ux|tl|Bilisan mo '''at''' ako'y aalis na.|Do it faster '''as''' I'm leaving soon.}}
 
 ====Derived terms====
 {{der3|tl|at saka|'tsaka|tsaka|at ano}}
