--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1214,7 +1214,7 @@ Compare {{cog|pag|ta||because}}, {{cog|pag|et}}, and {{cog|pag|tan||and}}.
 * {{tl-IPA}}
 
 ===Conjunction===
-{{head|tl|conjunction}}
+{{tl-head|pos=conjunction|b={{tl-bay sc}}}}
 
 # [[and]]
 #: {{syn|tl|saka}}
