t+yo:[[ẹlẹ́dẹ̀]] ([[WT:EDIT|Assisted]]) <pig#69531116>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -511,6 +511,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Turkish: {{tt+|tr|tiksindirici}}
 * Walloon: {{tt+|wa|pourcea|m}}
 * Welsh: {{tt+|cy|mochyn|m}}
+* Yoruba: {{t|yo|ẹlẹ́dẹ̀}}
 {{trans-bottom}}
 
 {{trans-top|dirty or slovenly person}}
@@ -539,6 +540,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Turkish: {{tt+|tr|pasaklı}}
 * Walloon: {{tt+|wa|pourcea|m}}, {{tt+|wa|coshet|m}}
 * Welsh: {{tt+|cy|mochyn|m}}
+* Yoruba: {{t|yo|ẹlẹ́dẹ̀}}
 {{trans-bottom}}
 
 {{trans-top|derogatory slang for police officer}}
