--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -478,7 +478,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Walloon: {{tt+|wa|pourcea|m}}, {{tt+|wa|coshet|m}}
 * Welsh: {{tt+|cy|mochyn|m}}
 * Yiddish: {{tt|yi|חזיר|m|tr=khazer}}
-* Yoruba: {{t|yo|ọ̀bùn}}, {{t|yo|ẹlẹ́dẹ̀}}
+* Yoruba: {{t|yo|wọ̀bìà}}, {{t|yo|abólóújẹkú}}, {{t|yo|alájẹkì}}
 * Zazaki: {{tt|zza|séxur}}
 {{trans-bottom}}
 
