--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -61,8 +61,11 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 |weatherbound
 |weather-bound
 |wheelchair-bound
-|wheelchairbound|bound form|bound morpheme|bound up|bound water|culture-bound|egg-bound|fardel-bound|fluid-bound|harmonically bound|I/O bound|pot-bound|prison-bound|winter-bound|word-bound
+|wheelchairbound|culture-bound|egg-bound|fardel-bound|fluid-bound|harmonically bound|I/O bound|pot-bound|prison-bound|winter-bound|word-bound
 }}
+
+=====Derived terms=====
+{{der2|en|bound bailiff|bound propert|bound form|bound morpheme|bound up|bound water}}
 
 =====Translations=====
 {{trans-top|obliged to}}
