--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -113,7 +113,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Armenian: {{t+|hy|ախազ}}
 *: Old Armenian: {{t|xcl|կնգմենի}}
 * Bulgarian: {{t|bg|хермелин|m}}
-* Czech: {{t|cs|hranostaj|m}}
+* Czech: {{t|cs|hermelín|m}}
 * Finnish: {{t|fi|kärpännahka}}, {{t|fi|hermeliini}}
 * French: {{t+|fr|hermine|f}}
 * Georgian: {{t|ka|ყარყუმი}}
