--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -507,7 +507,7 @@ Written declension is more complicated due to the difficulty of combining "colle
 {{ubor|pl|en|college}}.
 
 ===Pronunciation===
-{{pl-p|'ko.ledż}}
+{{pl-p|'ko.ledż|hh=co.llege}}
 
 ===Noun===
 {{pl-noun|m-in}}
