--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -67,6 +67,7 @@ From {{der|en|fro|consumpcion}}, from {{der|en|la|consumptio}}.
 * Spanish: {{t+|es|consumo|m}}
 * Swedish: {{t+|sv|konsumtion|c}}, {{t+|sv|åtgång|c}}
 * Tagalog: {{t|tl|pananaid}}
+* Thai: {{t+|th|บริโภค}}
 * Turkish: {{t+|tr|tüketim}}
 * Westrobothnian: {{t|gmq-bot|vegang|f}}
 {{trans-bottom}}
