<man on the street#69548314>

--- a/en/m/man on the street.741085.wikitext
+++ b/en/m/man on the street.741085.wikitext
@@ -17,4 +17,10 @@
 ====Synonyms====
 * {{l|en|average Joe}}, {{l|en|John Q. Public}}, {{l|en|layman}}, {{l|en|man in the street}}, {{l|en|man on the Clapham omnibus}}
 
+====Translations====
+{{trans-top}}
+* French: {{t+|fr|homme de la rue|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:en:People]]
