/* Translations */fi <terrestrial planet#69556260>

--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -27,11 +27,11 @@
 ** [[ice giant]]
 
 ====Translations====
-{{trans-top|Any planet of the solar system or any exoplanet which is Earth-like}}
+{{trans-top|planet or exoplanet consisting chiefly of stone and metal}}
 * Chinese:
 *: Mandarin: {{t+|cmn|類地行星|sc=Hani}}, {{t+|cmn|类地行星|tr=lèidì xíngxīng|sc=Hani}}
 * Dutch: {{t|nl|aardse planeet|f}}
-* Finnish: {{t|fi|[[maankaltainen]] [[planeetta]]}}
+* Finnish: {{t|fi|kiviplaneetta}}
 * French: {{t+|fr|planète tellurique|f}}
 {{trans-mid}}
 * German: {{t|de|erdähnlicher Planet|m}}
