/* Translations */ <terrestrial planet#69556263>

--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -27,7 +27,7 @@
 ** [[ice giant]]
 
 ====Translations====
-{{trans-top|planet or exoplanet consisting chiefly of stone and metal}}
+{{trans-top|planet or exoplanet consisting chiefly of metals and rock}}
 * Chinese:
 *: Mandarin: {{t+|cmn|類地行星|sc=Hani}}, {{t+|cmn|类地行星|tr=lèidì xíngxīng|sc=Hani}}
 * Dutch: {{t|nl|aardse planeet|f}}
