--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -76,6 +76,9 @@
 ==Japanese==
 {{swp|lang=ja}}
 
+===Alternative forms===
+* {{ja-l|シーディーロム}}
+
 ===Etymology===
 From {{bor|ja|en|CD-ROM|sort=しいでぃいろむ}}.
 
