--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -348,10 +348,10 @@ From {{bor|uz|ru|сыр}}.
 
 # [[cheese]]
 
-===Synonym===
+===Synonyms===
 [[pishloq]]
 
-=====Declension=====
+====Declension====
 {{uz-decl-noun}}
 
 ===Etymology 2===
