--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -389,17 +389,21 @@ From {{der|it|he|בַּיִ״ת|tr=báyiṯ}}.
 ==Latgalian==
 
 ===Etymology===
-From {{inh|ltg|ine-bsl-pro|*bet}}, from {{der|ltg|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside}}. Cognates include {{cog|lv|bet}} and {{cog|lt|bet}}. Not related to {{ncog|en|but}}.
+{{dercat|ltg|ine-pro|inh=1}}
+From {{inh|ltg|ine-bsl-pro|*bet}}. Cognates include {{cog|lv|bet}} and {{cog|lt|bet}}. 
+
+Not related to {{ncog|en|but}}.
 
 ===Pronunciation===
-* {{IPA|ltg|/bæt/}}
+* {{ltg-IPA}}
+* {{hyph|ltg|bet}}
 
 ===Conjunction===
 {{head|ltg|conjunction}}
 
 # [[but]]
 
-====References====
+===References===
 * {{R:ltg:Nau:2011}}
 
 ----
