--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -14,7 +14,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 
 # {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
 #: {{ux|en|Dylan owes Fletcher $30 from an unsuccessful '''bet'''.}}
-# {{lb|en|figuratively|by extension|Philippines|elections|pageants}} A candidate.
+# {{lb|en|Philippines|figuratively|informal|by extension}} A candidate (for elections and pageants).
 # A degree of [[certainty]].
 #: {{ux|en|It’s a safe '''bet''' that it will rain tomorrow.}}
 #: {{ux|en|There's a decent '''bet''' that we'll be able to reach the top of that hill in an hour.}}
