--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -57,6 +57,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 
 ====Translations====
 {{trans-top|to cause to shape into a curve}}
+* Afrikaans: {{t+|af|buig}}
 * Albanian: {{t+|sq|ep}}, {{t+|sq|epem}}, {{t+|sq|përkul}}
 * Arabic: {{t|ar|ثَنَى}}
 * Armenian: {{t-needed|hy}}
