/* Hyponyms */ derived terms, all of them <theory#69581131>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -50,7 +50,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 ====Synonyms====
 * See also [[Thesaurus:supposition]]
 
-====Hyponyms====
+====Derived terms====
 {{col4|en|acoustic theory
 |algorithmic information theory
 |antenna theory
@@ -89,6 +89,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 |social theory
 |spectral theory
 |systems theory
+|theoryhead
 |theory of gravity
 |theory of relativity
 |theory of truth
