/* Derived terms */ <theory#69581135>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -72,6 +72,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 |graph theory
 |group theory
 |information theory
+|in theory
 |kinetic theory of gases
 |knot theory
 |literary theory
