--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -24,16 +24,22 @@ From {{prefix|en|multi|million}}.
 
 ====Translations====
 {{trans-top|having several millions}}
+* Asturian: {{t|ast|multimillonariu}}
+* Belarusian: {{t|be|многамільённы}}
+* Catalan: {{t|ca|multimilionari}}
 * Finnish: {{t|fi|monimiljoonainen}}
 * French: {{t+|fr|multimillionnaire|m|f}}
 * Galician: {{t|gl|multimillonario|m}}, {{t|gl|multimillonaria|f}}
 * German: {{t+|de|millionenschwer}}, {{t|de|millionenteuer}}
+* Hungarian: {{t|hu|többmilliós}}, {{t|hu|többmilliónyi}}
 * Italian: {{t|it|multimilionario|m}}, {{t|it|multimilionaria|f}}
 {{trans-mid}}
 * Manx: {{t|gv|yl-villioonagh}}
+* Polish: {{t|pl|wielomilionowy}}
 * Portuguese: {{t+|pt|multimilionário|m}}, {{t|pt|multimilionária|f}}
 * Russian: {{t+|ru|многомиллио́нный}}
 * Spanish: {{t+|es|multimillonario}}
+* Ukrainian: {{t+|uk|багатомільйо́нний}}
 {{trans-bottom}}
 
 ====See also====
