/* Derived terms */ <bound#69584549>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -65,7 +65,7 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 }}
 
 =====Derived terms=====
-{{der2|en|bound bailiff|bound propert|bound form|bound morpheme|bound up|bound water}}
+{{der2|en|bound bailiff|bound property|bound form|bound morpheme|bound state|bound up|bound water}}
 
 =====Translations=====
 {{trans-top|obliged to}}
