--- a/en/f/frick.741824.wikitext
+++ b/en/f/frick.741824.wikitext
@@ -6,14 +6,7 @@
 * {{audio|en|LL-Q1860 (eng)-Vealhurl-frick.wav|Audio (Southern England)}}
 * {{rhymes|en|ɪk}}
 
-===Interjection===
-{{en-interj}}
-
-# {{euphemistic form of|en|fuck}}
-
-====Derived terms====
-* {{l|en|fricker}}
-* {{l|en|fricking}}
+grr
 
 ===Noun===
 {{en-noun}}
