/* Etymology */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <at#69597643>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1208,7 +1208,7 @@ From {{der|smr|poz-pro|*əpat}}, from {{der|smr|map-pro|*Səpat}}.
 * {{alter|tl|'t}} {{q|after words ending with vowel}}
 
 ===Etymology===
-Compare {{cog|pag|ta||because}}, {{cog|pag|et}}, and {{cog|pag|tan||and}}.
+Compare {{cog|pag|ta||because}} and {{m|pag|tan||and}}, and {{cog|agv|at||and; because}}.
 
 ===Pronunciation===
 * {{tl-IPA}}
