--- a/en/o/overstrain.856243.wikitext
+++ b/en/o/overstrain.856243.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{prefix|en|over|strain}}.
+From {{prefix|en|over|strain|pos=verb}}.
 
 ===Verb===
 {{en-verb}}
