--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -11,6 +11,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 * {{a|Sephardi Hebrew}} {{IPA|he|/jis.raˈ(ʔ)el/}}
 * {{a|Tiberian}} {{IPA|he|/jis.rɔːˈʔeːl/}}
 * {{a|hbo}} {{IPA|he|/jiɬ.raːˈʔeːl/}} → {{IPAchar|/jis.raːˈʔeːl/}}
+{{rfap|he}}
 
 ===Proper noun===
 [[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
