--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -255,7 +255,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 }}
 
 ===Etymology 2===
-From {{der|en|he|בית|tr=béyt}}.
+From {{bor|en|he|בית|tr=bēt}}.
 
 ====Noun====
 {{en-noun|?}}
