--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -11,6 +11,7 @@ Cognate with {{cog|fy|leare||leather}}, {{cog|nds|Leder||leather}}, {{cog|nl|led
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈlɛðə/}}
 * {{a|GA}} {{IPA|en|/ˈlɛðɚ/}}
+* {{a|dialectal|obsolete}} {{IPA|en|/ˈlʌðəɹ/}}<ref>{{R:Bingham IP|75}}</ref>
 * {{audio|en|en-us-leather.ogg|Audio (US)}}
 * {{rhymes|en|ɛðə(ɹ)|s=2}}
 
@@ -252,6 +253,9 @@ Cognate with {{cog|fy|leare||leather}}, {{cog|nds|Leder||leather}}, {{cog|nl|led
 |spur-leather
 |wash-leather
 }}
+
+===References===
+<references/>
 
 ===Anagrams===
 * {{anagrams|en|a=aeehlrt|Tar Heel|Tarheel|haltere|lethera}}
