--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -162,6 +162,27 @@ From {{inh|ofs|gmw-pro|*blad}}.
 
 ----
 
+==Old Irish==
+
+===Etymology===
+From {{inh|sga|cel-pro|*bledyos}}.
+
+===Pronunciation===
+{{IPA|sga|blʲeð}}
+
+===Noun===
+{{sga-noun|f}}
+# {{l|en|sea}}-{{l|en|monster}}
+#{{l|en|whale}}
+
+===Mutation===
+{{sga-mutation|b|led}}
+
+===Further reading===
+* {{R:DIL|6103|head=bled}}
+
+----
+
 ==Serbo-Croatian==
 
 ===Alternative forms===
