/* Old Irish */ <bled#69612464>

--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -173,7 +173,10 @@ From {{inh|sga|cel-pro|*bledyos}}.
 ===Noun===
 {{sga-noun|f}}
 # {{l|en|sea}}-{{l|en|monster}}
-#{{l|en|whale}}
+# {{l|en|whale}}
+
+====Derived terms====
+*{{l|sga|bledmíl}}
 
 ===Mutation===
 {{sga-mutation|b|led}}
