--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -175,6 +175,9 @@ From {{inh|sga|cel-pro|*bledyos}}.
 # {{l|en|sea}}-{{l|en|monster}}
 # {{l|en|whale}}
 
+====Inflection====
+{{sga-decl-a-fem|bleid}}
+
 ====Derived terms====
 *{{l|sga|bledmíl}}
 
