--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -2,7 +2,7 @@
 [[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat|marbled '''polecat''']] (weasel-like animal).]]
 
 ===Etymology===
-From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanations include its fondness for poultry, or the Old English word fol, "foul", because of its smell. The same species was also known as folmart, "foul marten".
+From {{inh|en|enm|polcat}}, {{m|enm|pulkat}}, of {{unk|en|title=uncertain}} origin. Probably from {{der|en|enm|*pole}}, {{m|enm|*poule|t=hen}}, from {{der|en|fro|poule|t=hen}} + {{m+|enm|cat}}. Compare {{m+|en|foumart|foulmart}}.
 
 ===Pronunciation===
 * {{IPA|en|/ˈpəʊlkæt/}}
