/* Related terms */ Rename to Derived terms, ++ <ישראל#69629053>

--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -27,8 +27,9 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 # the [[Kingdom of Israel]]
 # {{given name|he|male|xlit=Yisrael|eq=Israel}}
 
-====Related terms====
+====Derived terms====
 * {{l|he|אֶרֶץ יִשְׂרָאֵל}}
+* {{l|he|חלב ישראל|tr=chaláv yisraél}}
 * {{l|he|יִשְׂרְאֵלִי}}
 * {{l|he|יִשְׂרְאֵלִיּוּת|tr=yisraeliyút||[[Israeliness]]}}
 * {{l|he|עַם יִשְׂרָאֵל}}
