/* Derived terms */ <mundo#69632106>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -40,7 +40,7 @@ From {{der|an|la|mundus}}.
 #: {{syn|bcl|sentir}}
 
 ====Derived terms====
-{{der3|bcl|mamundo|magmundo|pagkamundo|kamunduan|makamundo|pagmundo}}
+{{der3|bcl|mamundo|magmundo|munduan|pagkamundo|kamunduan|makamundo|pagmundo}}
 
 ----
 
