----  ==German==  ===Noun=== {{de-noun|n,-,-}}  # {{initialism of|de|Fließmittel}}  ====Declension==== {{de-ndecl|n,-,-}} <FM#69638416>

--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -43,3 +43,15 @@
 
 [[Category:en:Broadcasting]]
 [[Category:en:Navigation]]
+
+----
+
+==German==
+
+===Noun===
+{{de-noun|n,-,-}}
+
+# {{initialism of|de|Fließmittel}}
+
+====Declension====
+{{de-ndecl|n,-,-}}
