--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -235,7 +235,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 #: {{zh-co|陳 si{o}r{e4}|Mr. Chan|C}}
 
 ===Related terms===
-* {{zh-l|阿sir}}
+* {{zh-l|阿Sir}}
 
 [[Category:Chinese terms written in foreign scripts]]
 
