--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -6,7 +6,7 @@
 ===Proper noun===
 {{en-proper noun|head=Pax Romana}}
 
-# {{lb|en|historical}} The long period of relative peace and minimal expansion by military force experienced by the Roman Empire between 27 {{BCE}} and 180 {{CE}}.
+# {{lb|en|historical}} The long period of relative peace and minimal expansion by military force experienced by the [[Roman Empire]] between 27 {{BCE}} and 180 {{CE}}.
 #: {{syn|en|Pax Augusta}}
 
 ====See also====
