--- a/en/p/Pax Augusta.855980.wikitext
+++ b/en/p/Pax Augusta.855980.wikitext
@@ -4,6 +4,6 @@
 {{blend|en|Pax Romana|Augustus}}<!-- is the English term from latin Augustus or Augusta? if it's from the former, mention that 'pax Augusta' would be ungrammatical in Latin or something -->
 
 ===Proper noun===
-{{en-proper noun|head=[[pax#Latin|Pax]] [[Augusta]]}}
+{{en-proper noun|head=Pax Augusta}}
 
 # {{synonym of|en|Pax Romana}}
