/* Translations */ <Pax Americana#69648300>

--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -13,7 +13,7 @@
 #* {{quote-journal|en|author=David Leonhardt|title=Why Ukraine Is Different|work=The New York Times|date=2022-02-21|url=https://www.nytimes.com/2022/02/21/briefing/ukraine-russia-war-pax-americana.html|issn=0362-4331|passage=A war like this — a voluntary war of aggression — would be a sign that Putin believed that '''Pax Americana''' was over and that the U.S., the European Union and their allies had become too weak to exact painful consequences.}}
 
 ====Translations====
-{{trans-top}}
+{{trans-top|period of relative peace in the Western world}}
 * French: {{t+|fr|pax americana}}
 * German: {{t|de|Pax Americana}}
 * Japanese: {{t|ja|パクス・アメリカーナ|tr=pakusu amerikāna}}
