--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{lbor|en|la|[[pax]] [[americāna]]|lit=American peace}}, modeled on {{m|en|Pax Romana}}.
+{{lbor|en|la|[[pax]] + [[americānus|americāna]]|lit=American peace}}, modeled on {{m|en|Pax Romana}}.
 
 ===Proper noun===
 {{en-proper noun|head=Pax Americana}}
