--- a/en/p/Pax Britannica.855985.wikitext
+++ b/en/p/Pax Britannica.855985.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{lbor|en|la|[[pax]] [[britannica]]|lit=British peace}}, modeled on {{m|en|Pax Romana}}.
+{{lbor|en|la|[[pax]] + [[britannicus|britannica]]|lit=British peace}}, modeled on {{m|en|Pax Romana}}.
 
 ===Proper noun===
 {{en-proper noun|head=Pax Britannica}}
