/* Pronunciation *//* Homophones */ <seize#69649446>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -7,7 +7,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * {{enPR|sēz}}, {{IPA|en|/siːz/}}
 * {{audio|en|en-us-seize.ogg|Audio (US)}}
 * {{rhymes|en|iːz|s=1}}
-* {{homophones|en|seas|sees}}
+* {{homophones|en|cease|seas|sees}}
 
 ===Verb===
 {{en-verb}}
