--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -260,7 +260,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 ==East Central German==
 
 ===Etymology===
-From {{inh|gmw-ecg|gmh|blöde|blode}}, from {{inh|gmw-ecg|goh|blōdi}}, from {{inh|gmw-ecg|gem-pro|*blauþijaz}}, {{m|gem-pro|*blauþaz||weak, soft, timid}}. Cognate with {{cog|en|blöd}}.
+From {{inh|gmw-ecg|gmh|blöde|blode}}, from {{inh|gmw-ecg|goh|blōdi}}, from {{inh|gmw-ecg|gem-pro|*blauþijaz}}, {{m|gem-pro|*blauþaz||weak, soft, timid}}. Cognate with {{cog|de|blöd}}.
 
 ===Adjective===
 {{head|gmw-ecg|adjective}}
