--- a/en/i/individualistic.742106.wikitext
+++ b/en/i/individualistic.742106.wikitext
@@ -12,4 +12,31 @@ From {{affix|en|individualist|-ic}} or {{affix|en|individual|-istic}}.
 
 ====Related terms====
 * {{l|en|individualism}}
+
+====Translations====
+{{trans-top|more interested in the individual than in society as a whole}}
+* Asturian: {{t|ast|individualista}}
+* Belarusian: {{t|be|індывідуалісты́чны}}
+* Catalan: {{t|ca|individualista}}
+* Danish: {{t|da|individualistisk}}
+* Dutch: {{t+|nl|individualistisch}}
+* Estonian: {{t|et|individualistlik}}
+* Finnish: {{t+|fi|individualistinen}}
+* French: {{t+|fr|individualiste}}
+* Galician: {{t|gl|individualista}}
+* German: {{t|de|individualistisch}}
+* Hungarian: {{t+|hu|individualista}}
+{{trans-mid}}
+* Latvian: {{t|lv|individuālistisks}}
+* Polish: {{t+|pl|indywidualistyczny}}
+* Portuguese: {{t|pt|individualista}}
+* Russian: {{t+|ru|индивидуалисти́ческий}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|индивидуалѝстичкӣ}}
+*: Roman: {{t+|sh|individualìstičkī}}
+* Spanish: {{t+|es|individualista}}
+* Swedish: {{t+|sv|individualistisk}}
+* Ukrainian: {{t|uk|індивідуалісти́чний}}
+{{trans-bottom}}
+
 {{C|en|Personality}}
