--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -200,7 +200,7 @@ From {{bor|es|fr|abandonner}}, from {{der|es|gem-pro|*bannaną}}.
 {{es-verb}}
 
 # {{lb|es|transitive}} to [[abandon]], to [[leave]]
-#: {{uxi|es|La '''abandonó''' por otra mujer.|He abandoned her for another woman.}}
+#: {{ux|es|La '''abandonó''' por otra mujer.|He '''abandoned''' her for another woman.}}
 # {{lb|es|transitive}} to [[neglect]]
 #: {{syn|es|descuidar}}
 
