/* Derived terms */ <crook#69679361>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -42,8 +42,7 @@ Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml
 * {{sense|criminal}} See [[Thesaurus:criminal]]
 
 =====Derived terms=====
-* {{l|en|by hook or by crook}}
-* {{l|en|by hook or crook}} {{qualifier|US}}
+{{der2|en|by hook or by crook|{{l|en|by hook or crook}} {{qualifier|US}}|apple crook|arm in crook|crook in the lot||pool at the crook|throw-crook}}
 
 =====Translations=====
 {{trans-top|a criminal who steals, lies, cheats or does other dishonest or illegal things}}
