--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -166,6 +166,9 @@ From {{m|en|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/austral
 ===References===
 <references/>
 
+===See also===
+* [[crook and nanny]] {{i|etymologically unrelated}}
+
 [[Category:en:Crime]]
 [[Category:en:People]]
 
