--- a/en/f/furball.746671.wikitext
+++ b/en/f/furball.746671.wikitext
@@ -15,10 +15,11 @@
 #* {{quote-av|en|author=Drachinifel|title=Guadalcanal Campaign - The Big Night Battle: Night 1 (IJN 3(?) : 2 USN)|date=10 March 2021|url=https://www.youtube.com/watch?v=Em_PuLURII4|archiveurl=https://web.archive.org/web/20221107014435/https://www.youtube.com/watch?v=Em_PuLURII4|archivedate=7 November 2022|accessdate=6 November 2022|time=22:21|text={{...|Two more U.S. Navy destroyers, ''Aaron Ward'' and ''Sterett'', had become detached after the latter had taken raking fire from a number of ships near ''Hiei'', but they found the equally-lost ''Yudachi'', which failed to spot them in time and was raked by 5-inch shells and everything else the two destroyers could throw at it for its trouble, leaving the Japanese destroyer mortally wounded and abandoned.  }}But, as with the '''furball''' that had broken out around ''San Francisco'', things escalated once again, as ''Teruzuki'' rolled better on her perception check, ambushing ''Sterett'' and blowing enough holes in her to force the U.S. destroyer to withdraw.}}
 
 =====Translations=====
-{{trans-see|coughed up furball|hairball}}
-
+{{trans-see|coughed-up ball of fur|hairball}}
 {{trans-top|furry person or animal}}
 {{trans-mid}}
+{{trans-bottom}}
+{{trans-top|large, disorganized battle}}
 {{trans-bottom}}
 
 ===See also===
