--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -38,7 +38,8 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 
 ====Hyponyms====
 * {{l|en|least weasel}}
-* {{l|en|mountain weasel}}
+* {{vern|long-tailed weasel}} ({{taxlink|Mustela frenata|species}})
+* {{vern|mountain weasel}}
 * {{l|en|short-tailed weasel}}
 * {{l|en|Siberian weasel}}
 
