--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -37,9 +37,10 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 * {{l|en|mammal|carnivorous mammal}}
 
 ====Hyponyms====
+* {{vern|Altain weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
 * {{l|en|least weasel}}
 * {{vern|long-tailed weasel}} ({{taxlink|Mustela frenata|species}})
-* {{vern|mountain weasel}}
+* {{vern|mountain weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
 * {{l|en|short-tailed weasel}}
 * {{l|en|Siberian weasel}}
 
