--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -38,7 +38,9 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 
 ====Hyponyms====
 * {{vern|Altai weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
-* {{l|en|least weasel}}
+* {{l|en|common weasel}} (''[[Mustela nivalis]]'')
+* {{l|en|least weasel}} (''[[Mustela nivalis]]'')
+* {{l|en|little weasel}} (''[[Mustela nivalis]]'')
 * {{vern|long-tailed weasel}} ({{taxlink|Mustela frenata|species}})
 * {{vern|mountain weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
 * {{vern|pale weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
