--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -48,7 +48,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 * {{l|en|Siberian weasel}}
 
 ====Derived terms====
-* {{vern|iceweasel}}
+* {{l|en|iceweasel}}
 * {{l|en|weaselly}}
 * {{l|en|weasely}}
 
