--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -37,38 +37,38 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 * {{l|en|mammal|carnivorous mammal}}
 
 ====Hyponyms====
-* {{vern|African striped weasel}} (''[[Poecilogale albinucha]]'')
+* {{vern|African striped weasel}} ({{taxlink|Poecilogale albinucha|species|ver=221110}})
 * {{vern|Altai weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
-* {{vern|Amazon weasel}} (''[[Neogale africana]]'')
+* {{vern|Amazon weasel}} ({{taxlink|Neogale africana|species|ver=221110}})
 * {{vern|back-striped weasel}} ({{taxlink|Mustela strigidorsa|species}})
-* {{vern|Bonaparte's weasel}} (''[[Mustela erminea cicognanii]]'', ''[[Mustela cicognanii]]'')
+* {{vern|Bonaparte's weasel}} ({{taxlink|Mustela erminea cicognanii|species|ver=221110}}, {{taxlink|Mustela cicognanii|species|ver=221110}})
 * {{vern|bridled weasel}} ({{taxlink|Mustela frenata|species}})
-* {{vern|Colombian weasel}} (''[[Neogale felipei]]'')
+* {{vern|Colombian weasel}} ({{taxlink|Neogale felipei|species|ver=221110}})
 * {{vern|common weasel}} (''[[Mustela nivalis]]'')
-* {{l|en|dwarf weasel}} (''[[Mustela nivalis]]'')
-* {{l|en|Egyptian weasel}} (''[[Mustela nivalis subpalmata]]'')
+* {{vern|dwarf weasel}} (''[[Mustela nivalis]]'')
+* {{vern|Egyptian weasel}} ({{taxlink|Mustela nivalis subpalmata|species|ver=221110}})
 * {{l|en|honey weasel}} (''[[Mellivora capensis]]'')
-* {{l|en|Japanese weasel}} (''[[Mustela sibirica sibirica]]'', ''[[Mustela itatsai]]'')
+* {{vern|Japanese weasel}} ({{taxlink|Mustela sibirica sibirica|subspecies|ver=221110}}, {{taxlink|Mustela itatsai|species|ver=221110}})
 * {{l|en|least weasel}} (''[[Mustela nivalis]]'')
 * {{vern|little weasel}} (''[[Mustela nivalis]]'')
 * {{vern|long-tailed weasel}} ({{taxlink|Mustela frenata|species}})
-* {{vern|Malacca weasel}} (''[[Viverricula malaccensis]]'')
-* {{vern|Malay weasel}}, {{vern|Malayan weasel}} (''[[Mustela nudipes]]'')
+* {{vern|Malacca weasel}} ({{taxlink|Viverricula malaccensis|species|ver=221110}})
+* {{vern|Malay weasel}}, {{vern|Malayan weasel}} ({{taxlink|Mustela nudipes|species|ver=221110}})
 * {{vern|mountain weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
-* {{vern|New York weasel}} (''[[Mustela frenata noveboracensis]]'')
+* {{vern|New York weasel}} ({{taxlink|Mustela frenata noveboracensis|subspecies|ver=221110}})
 * {{vern|pale weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
-* {{vern|Patagonian weasel}} (''[[Lyncodon patagonicus]]'')
-* {{l|en|pygmy weasel}} (''[[Mustela nivalis]]'')
-* {{l|en|short-tailed weasel}} (''[[Mustela erminea]]'', ''[[Mustela richardsonii]]'')
+* {{l|en|Patagonian weasel}} ({{taxlink|Lyncodon patagonicus|species|ver=221110}})
+* {{vern|pygmy weasel}} (''[[Mustela nivalis]]'')
+* {{l|en|short-tailed weasel}} (''[[Mustela erminea]]'', {{taxlink|Mustela richardsonii|species|ver=221110}})
 * {{l|en|Siberian weasel}} (''[[Mustela sibirica]]'')
-* {{vern|snake weasel}} (''[[Poecilogale albinucha]]'')
+* {{vern|snake weasel}} ({{taxlink|Poecilogale albinucha|species|ver=221110}})
 * {{vern|stripe-backed weasel}} ({{taxlink|Mustela strigidorsa|species}})
 * {{vern|tiger weasel}} (''[[Vormela]]'' spp.)
-* {{vern|Tonkin weasel}} (''[[Mustela tonkinensis]]'')
-* {{vern|vison weasel}} (''[[Neogale vison]]'')
+* {{vern|Tonkin weasel}} ({{taxlink|Mustela tonkinensis|species|ver=221110}})
+* {{vern|vison weasel}} ({{taxlink|Neogale vison|species|ver=221110}})
 * {{vern|white weasel}} (''[[Mustela erminea]]'')
 * {{vern|yellow weasel}} (''[[Mustela sibirica]]'')
-* {{vern|yellow-bellied weasel}} (''[[Mustela kathiah]]'')
+* {{vern|yellow-bellied weasel}} ({{taxlink|Mustela kathiah|species|ver=221110}})
 
 ====Derived terms====
 * {{l|en|iceweasel}}
