--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -21,19 +21,14 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 # Any of the [[carnivorous]] [[mammal]]s of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and light-coloured belly.
 # The taxonomic family [[Mustelidae]] is also called the '''weasel''' family.
 # A [[devious]] or [[sneaky]] person or animal.
-#* {{quote-journal|en|date=February 8, 2016
-|author=Marwan Bishara
-|title=Why Obama fails the leadership test in the Middle East
-|work=Al Jazeera English
-|url=http://www.aljazeera.com/indepth/opinion/2016/02/obama-fails-leadership-test-middle-east-160208111035946.html
-|page=
-|passage=Once you've gone beyond the scripted speeches, soundbites and cliches, you'll notice how the debate about leadership is primarily divided between the three governors and two senators, the other two '''weasels''', Donald Trump and Ben Carson notwithstanding.}}
+#* {{quote-journal|en|date=February 8, 2016| author=Marwan Bishara| title=Why Obama fails the leadership test in the Middle East| work=Al Jazeera English| url=http://www.aljazeera.com/indepth/opinion/2016/02/obama-fails-leadership-test-middle-east-160208111035946.html| passage=Once you've gone beyond the scripted speeches, soundbites and cliches, you'll notice how the debate about leadership is primarily divided between the three governors and two senators, the other two '''weasels''', Donald Trump and Ben Carson notwithstanding.}}
 # A type of yarn winder used for counting the yardage of handspun yarn. It most commonly has a wooden peg or dowel that pops up from the gearing mechanism after a certain number of yards have been wound onto the winder.
 
 ====Synonyms====
 * {{sense|any of the carnivorous mammals of the genus ''Mustela''}} {{l|en|mustela}}
 
-====Hyponyms====
+====Derived terms====
+; carnivorous mammals
 * {{vern|African striped weasel}} ({{taxlink|Poecilogale albinucha|species|ver=221110}})
 * {{vern|Altai weasel}} ({{taxlink|Mustela altaica|species|ver=221110}})
 * {{vern|Amazon weasel}} ({{taxlink|Neogale africana|species|ver=221110}})
@@ -66,13 +61,10 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 * {{vern|white weasel}} (''[[Mustela erminea]]'')
 * {{vern|yellow weasel}} (''[[Mustela sibirica]]'')
 * {{vern|yellow-bellied weasel}} ({{taxlink|Mustela kathiah|species|ver=221110}})
-
-====Derived terms====
+; other
 * {{l|en|iceweasel}}
 * {{l|en|weaselly}}
 * {{l|en|weasely}}
-
-====Related terms====
 * {{l|en|weasel word}}
 
 ====Translations====
