--- a/en/n/Northern Lights.854980.wikitext
+++ b/en/n/Northern Lights.854980.wikitext
@@ -5,4 +5,4 @@
 ===Proper noun===
 {{en-proper noun|head=[[northern|Northern]] [[lights|Lights]]}}
 
-# {{alternative spelling of|en|northern lights}}
+# {{alt case|en|northern lights}}
