/* Derived terms */ <mill#69818156>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -101,6 +101,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |[[slitting mill]] {{q|mill}}
 |[[Slitting Mill]] {{q|village}}
 |steel mill
+|Stone Mills
 |Temple Mills
 |tide mill
 |Tide Mills
@@ -186,6 +187,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Rock Mills
 |Sheffield Mills
 |Steeves Mills
+|Stone Mills
 |Tay Mills
 |Teeds Mills
 |Tracey Mills
