t+pl:[[{{t-needed}}]] t+fr:[[[[droit]] [[de]] [[se]] [[vanter]]]] ([[WT:EDIT|Assisted]]) <bragging rights#69829896>

--- a/en/b/bragging rights.856465.wikitext
+++ b/en/b/bragging rights.856465.wikitext
@@ -19,6 +19,8 @@
 *: Mandarin: {{t|cmn|[[吹噓]][[的]][[資本]]|sc=Hani}}, {{t|cmn|[[吹嘘]][[的]][[资本]]|tr=chuīxū de zīběn|sc=Hani}}
 * Finnish: {{t|fi|kerskailuoikeudet|p}}
 {{trans-mid}}
+* French: {{t+|fr|[[droit]] [[de]] [[se]] [[vanter]]|m}}
+* Polish: {{t-needed|pl}}
 * Russian: {{t-needed|ru}}
 * Swedish: {{t|sv|skryträttigheter|p}}
 {{trans-bottom}}
